--- a/APM-Start/src/app/app.component.css
+++ b/APM-Start/src/app/app.component.css
@@ -4,16 +4,29 @@
 }
 
 .navbar-light .navbar-nav .nav-link.active {
-  color: #007ACC
+  color: #e5e9ec;
+  background-color: #007bff;
 }
 
+.spinner-container {
+  position: fixed; /* Sit on top of the page content */
+  width: 100%; /* Full width (cover the whole page) */
+  height: 100%; /* Full height (cover the whole page) */
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,0.5); /* Black background with opacity */
+  z-index: 999; /* Specify a stack order in case you're using a different order for other elements */
+  cursor: pointer; /* Add a pointer on hover */
+}
 /* Spinner */
 .spinner {
   font-size:300%;
-  position:absolute;
+  position: absolute;
   top: 50%;
   left: 50%;
-  z-index:10
+  transform: translate(-50%, -50%);
 }
 
 .fa-spinner {
