--- a/APM-Start/src/app/app.component.html
+++ b/APM-Start/src/app/app.component.html
@@ -1,14 +1,25 @@
+
+<div class="spinner-container" *ngIf = "loading">
+  <span class="fa fa-spinner spinner"></span>
+</div>
 <nav class="navbar navbar-expand navbar-light bg-light">
   <a class="navbar-brand">{{pageTitle}}</a>
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a class="nav-link">Home</a>
+      <a class="nav-link"
+      [routerLink]="['/home']"
+      routerLinkActive = "active">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link">Product List</a>
+      <a class="nav-link"
+      [routerLink]="['/products']"
+      routerLinkActive = "active" 
+      [routerLinkActiveOptions]="{exact: true}">Product List</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link">Add Product</a>
+      <a class="nav-link"
+      [routerLink]="['/products/0/edit']"
+      routerLinkActive = "active">Add Product</a>
     </li>
   </ul>
   <ul class="navbar-nav ml-auto">
@@ -21,7 +32,7 @@
     </li>
     <li class="nav-item"
         *ngIf="!isLoggedIn">
-      <a class="nav-link">Log In</a>
+      <a class="nav-link" [routerLink]="['/login']">Log In</a>
     </li>
     <li class="nav-item"
         *ngIf="isLoggedIn">
@@ -31,5 +42,12 @@
   </ul>
 </nav>
 <div class="container">
-  <pm-home></pm-home>
+  <div class="row">
+    <div class="col-md-10">      
+      <router-outlet #o="outlet"></router-outlet>
+    </div>
+    <div class="col-md-2">
+      <router-outlet name="logs"></router-outlet>
+    </div>
+  </div>
 </div>
